--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="pb-5 sm:pb-20 xl:pb-32">
                 <div class="abstract">
                     <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">
-                       Cross-Scrambled-Variations are as the Scrambled-V-Variations a group of manipulation patterns with four persons including 3 jugglers 
+                       Cross-Scrambled-Variations are, as the Scrambled-V-Variations, a group of manipulation patterns with four persons: 3 jugglers 
                        \(\{A, B, C\}\) and a manipulator \(M\). 
-                       In distinction to the Scrambled-V-Variations a different feed transition is used, which results in a change of the handedness after every transition.<br> 
+                       In distinction to the Scrambled-V-Variations, a different feed transition is used, which results in a change of the handedness after every transition.<br> 
                     </p>
                 </div>
 
@@ -29,7 +29,7 @@
                     <span class="font-bold">The feed transition. </span>
                     Instead of using the "standard feed transition" (also called left pentagon in the 
                     <a href="https://jugglingedge.com/pdf/passingpatternscompendium.pdf"> Passing Compendium</a>[1] p.53). 
-                    Cross-Scrambled-Variations are based the feed transition, described here as right (line). It goes as follows:
+                    Cross-Scrambled-Variations are based on the feed transition, described here as right (line). It goes as follows:
  
                 </p>
                 <img class="object-center h-40 pb-2" src="images/drawing.svg">
@@ -39,20 +39,20 @@
                 </h5>
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
                     At the first transition, Juggler B is changing to the position to the <b>right</b> of juggler \(A\) and becomes \(C'\). 
-                    During the walking time of B, a pass between the to other passers is taking place. 
+                    During the walking time of B, a pass between the two other passers is taking place. 
                     This pass is already the pass at beat one of the iteration, where \(C \rightarrow A'\) and \(A \rightarrow B'\) respectively.
-                    Note, that in this transition the handedness changes from right to left and wise versa on every transition. 
+                    Note that in this transition the handedness changes from right to left and vise versa on every transition. 
                     This means, starting with right-handed passes, all passes are thrown with the left hand after the transition (see Fig.1). 
                     We mark this by \(A'\), \(B'\) and \(C'\).
-                    Notice that due to this change, \(C\) and \(A\) wil have a 3 count (?).
+                    Notice that due to this change, \(C\) and \(A\) will have a 3 count (?).
                 </p>
 
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
                     <span class="font-bold">With Manipulation. </span>
                     The manipulation sequence follows the one of the Scrambled-V-Variations. 
-                    However during to the change of the handedness, one will have a certain role only with on the right <b>or</b> on the left handed side, never on both.
+                    However due to the change of the handedness, one will have a certain role only with on the right <b>or</b> on the left handed side, never on both.
 
-                    with manipu there is a 3 and a 5 count. 
+                    {# with manipu there is a 3 and a 5 count.  #}
                 </p>
                 <div class="text-xs sm:text-sm"> 
                     <h5 class="text-xs w-full sm:text-sm pr-6 pl-6 sm:pr-6 sm:pr-6 md:pl-40 md:pr-40 leading-none"> 
@@ -121,16 +121,18 @@
                         </tr>
                     </table>
                 </div>
-                As shown above in the table, \(J_1 \equiv J_3\) and \(J_2 \equiv J_4\)according to there permutation. 
+                As shown above in the table, \(J_1 \equiv J_3\) and \(J_2 \equiv J_4\) according to their permutation. 
 
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
-                    We found it much easier,not to juggle during the walking, since it can get quite crowded inside the pattern
+                    We found it much easier not to juggle during the walking, since it can get quite crowded inside the pattern.
                     It is recommended to count loud, since it happens that during the transition that just one juggler is juggling.
                 </p>
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
-                    <span class="font-bold">Fun Fact: </span>
-
+                    <span class="font-bold">Fun Fact: </span> 
+                    The underlying feed transition encompasses 5 transitions (6 to get to the starting allocation). <br>
+                    However, introducing a manipulator shortens the number of transitions to 3 (4 to get tp the starting allocation respectively).
                 </p>
+                <span> \(A \rightarrow B' \rightarrow C \rightarrow A' \rightarrow B \rightarrow C' \rightarrow A\)</span> <br>
             </div>
         </div>
     </body>
