--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
-        <link rel="stylesheet" type="text/css" href="main.css">
-        <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link href="styles/tailwind.min.css" rel="stylesheet">
         <script id="MathJax-script" async
                 src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
         </script>
@@ -13,13 +13,13 @@
 
     <body>
         <div class="page w-full xl:w-8/12 m-auto bg-white xl:mt-4 xl:mb-4">
-            <h2 class="pb-8 pt-24 sm:pt-32 xl:pt-40 text-4xl pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">Cross-Scrambled-Variations</h2>
+            <h2 class="pb-8 pt-24 sm:pt-32 xl:pt-40 text-4xl pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">Cross-V-Variations</h2>
             <!-- <h4 class="text-xl"> Jennifer Matthiesen </h4> -->
             <h4 class="text-xl pb-8 xl:pb-12"> October 2020 </h4>
             <div class="pb-5 sm:pb-20 xl:pb-32">
                 <div class="abstract">
                     <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">
-                       Cross-Scrambled-Variations are, as the Scrambled-V-Variations, a group of manipulation patterns with four persons: 3 jugglers 
+                       Cross-V-Variations are, as the Scrambled-V-Variations, a group of manipulation patterns with four persons: 3 jugglers 
                        \(\{A, B, C\}\) and a manipulator \(M\). 
                        In distinction to the Scrambled-V-Variations, a different feed transition is used, which results in a change of the handedness after every transition.<br> 
                     </p>
@@ -28,8 +28,8 @@
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
                     <span class="font-bold">The feed transition. </span>
                     Instead of using the "standard feed transition" (also called left pentagon in the 
-                    <a href="https://jugglingedge.com/pdf/passingpatternscompendium.pdf"> Passing Compendium</a>[1] p.53). 
-                    Cross-Scrambled-Variations are based on the feed transition, described here as right (line). It goes as follows:
+                    Passing Compendium <a href="#footnote1">[1]</a> p.53). 
+                    Cross-V-Variations are based on the feed transition, described here as right (line). It goes as follows:
  
                 </p>
                 <img class="object-center h-40 pb-2" src="images/drawing.svg">
@@ -38,13 +38,13 @@
                     We further change the labeling according to the current standards.
                 </h5>
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
-                    At the first transition, Juggler B is changing to the position to the <b>right</b> of juggler \(A\) and becomes \(C'\). 
-                    During the walking time of B, a pass between the two other passers is taking place. 
+                    At the first transition, Juggler \(B\) is changing to the position to the <b>right</b> of juggler \(A\) and becomes \(C'\). 
+                    During the walking time of \(B\), a pass between the two other passers is taking place. 
                     This pass is already the pass at beat one of the iteration, where \(C \rightarrow A'\) and \(A \rightarrow B'\) respectively.
                     Note that in this transition the handedness changes from right to left and vise versa on every transition. 
                     This means, starting with right-handed passes, all passes are thrown with the left hand after the transition (see Fig.1). 
                     We mark this by \(A'\), \(B'\) and \(C'\).
-                    Notice that due to this change, \(C\) and \(A\) will have a 3 count (?).
+                    Notice that due to this change, \(C\) will have a 5-count and \(A\) a 3-count.
                 </p>
 
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
@@ -52,7 +52,6 @@
                     The manipulation sequence follows the one of the Scrambled-V-Variations. 
                     However due to the change of the handedness, one will have a certain role only with on the right <b>or</b> on the left handed side, never on both.
 
-                    {# with manipu there is a 3 and a 5 count.  #}
                 </p>
                 <div class="text-xs sm:text-sm"> 
                     <h5 class="text-xs w-full sm:text-sm pr-6 pl-6 sm:pr-6 sm:pr-6 md:pl-40 md:pr-40 leading-none"> 
@@ -134,6 +133,11 @@
                 </p>
                 <span> \(A \rightarrow B' \rightarrow C \rightarrow A' \rightarrow B \rightarrow C' \rightarrow A\)</span> <br>
             </div>
+            <p id="footnote1" class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-10 md:pl-20 md:pr-40">
+                <a href="https://jugglingedge.com/pdf/passingpatternscompendium.pdf">
+                    [1] Passing Compendium by Mark Weston, p.53
+                </a> 
+            </p>
         </div>
     </body>
 </html>
