--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <body>
         <div class="page w-full xl:w-8/12 m-auto bg-white xl:mt-4 xl:mb-4">
-            <h2 class="pb-8 pt-24 sm:pt-32 xl:pt-40 text-4xl pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">Cross-V-Variations</h2>
+            <h2 class="pb-8 pt-24 sm:pt-32 xl:pt-40 text-4xl pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">Crossed-V-Variations</h2>
             <!-- <h4 class="text-xl"> Jennifer Matthiesen </h4> -->
             <h4 class="text-xl pb-8 xl:pb-12"> October 2020 </h4>
             <div class="pb-5 sm:pb-20 xl:pb-32">
                 <div class="abstract">
                     <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 md:pl-40 md:pr-40">
-                       Cross-V-Variations are, as the Scrambled-V-Variations, a group of manipulation patterns with four persons: 3 jugglers 
+                       Crossed-V-Variations are, as the Scrambled-V-Variations, a group of manipulation patterns with four persons: 3 jugglers 
                        \(\{A, B, C\}\) and a manipulator \(M\). 
                        In distinction to the Scrambled-V-Variations, a different feed transition is used, which results in a change of the handedness after every transition.<br> 
                     </p>
@@ -29,7 +29,7 @@
                     <span class="font-bold">The feed transition. </span>
                     Instead of using the "standard feed transition" (also called left pentagon in the 
                     Passing Compendium <a href="#footnote1">[1]</a> p.53). 
-                    Cross-V-Variations are based on the feed transition, described here as right (line). It goes as follows:
+                    Crossed-V-Variations are based on the feed transition, described here as right (line). It goes as follows:
  
                 </p>
                 <img class="object-center h-40 pb-2" src="images/drawing.svg">
