--- a/index.html
+++ b/index.html
@@ -46,6 +46,61 @@
                     We mark this by \(A'\), \(B'\) and \(C'\).
                     Notice that due to this change, \(C\) will have a 5-count and \(A\) a 3-count.
                 </p>
+                <div class="text-xs sm:text-sm"> 
+                    <h5 class="text-xs w-full sm:text-sm pr-6 pl-6 sm:pr-6 sm:pr-6 md:pl-40 md:pr-40 leading-none"> 
+                        <span class="font-bold">Table 1.</span> Beats and actions of the jugglers.  
+                    </h5>
+                    <table class="beats pt-2">
+                        <tr class="text-xs border-b border-black ">
+                            <td class="w-24 text-left pl-3">Beats</td>
+                            <td class="w-10 border-l border-black">1</td>
+                            <td class="w-10">2</td>
+                            <td class="w-10">3</td>
+                            <td class="w-10">4</td>
+                            <td class="w-10">5</td>
+                            <td class="w-10">6</td>
+                            <td class="w-10 border-r border-black">7</td>
+                            <td class="w-10"></td>
+                        </tr>
+                        <tr class="border-b border-black leading-6">
+                            <td class="w-10 border-r border-black text-left pl-3">\(A\)</td>
+                            <td class="w-10">\(P_B \)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10">\(P_C\)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10">\(P_B \)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10 border-r border-black">\(S\)</td>
+                            <td class="w-16 ">\(\rightarrow B'\)</td>
+                        </tr>
+                        <tr class="border-b border-black leading-6">
+                            <td class="w-10 border-r border-black text-left pl-3">\(B\)</td>
+                            <td class="w-10">\(P_A\)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10">\(S\)</td>
+                            <td class="w-10">\(P_A\)</td>
+                            <td class="w-10">\(S^*\)</td>
+                            <td class="w-10 border-r border-black">\(S^*\)</td>
+                            <td class="w-16 ">\(\rightarrow C'\)</td>
+                        </tr>
+                        <tr class="border-b border-black leading-6">
+                            <td class="w-10 border-r border-black text-left pl-3">\(C\)</td>
+                            <td class="w-10">\(S \)</td>
+                            <td class="w-10">\(S \)</td>
+                            <td class="w-10">\(P_A \)</td>
+                            <td class="w-10">\(S \)</td>
+                            <td class="w-10">\(S \)</td>
+                            <td class="w-10">\(S \)</td>
+                            <td class="w-10 border-r border-black">\(P_A \)</td>
+                            <td class="w-16 ">\(\rightarrow A'\)</td>
+                        </tr>
+                    </table>
+                    <h5 class=" text-xs pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
+                        \(^*\)Do not throw: We find it quite hard to do the transition while juggling. <br>
+                        It is much easier to walk without juggling, since one is going <b>through</b> the pattern. 
+                    </h5>
+                </div>
 
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
                     <span class="font-bold">With Manipulation. </span>
@@ -55,7 +110,7 @@
                 </p>
                 <div class="text-xs sm:text-sm"> 
                     <h5 class="text-xs w-full sm:text-sm pr-6 pl-6 sm:pr-6 sm:pr-6 md:pl-40 md:pr-40 leading-none"> 
-                        <span class="font-bold">Table 1.</span> The positions of jugglers and their roles including left and right handedness. 
+                        <span class="font-bold">Table 2.</span> The positions of jugglers and their roles including left and right handedness. 
                     </h5>
                     <table class="beats">
                         <tr class="text-xxs">
