remove ref in text

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
                 <p class="pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
                     <span class="font-bold">The feed transition. </span>
-                    Instead of using the "standard feed transition" (also called left pentagon in the 
-                    Passing Compendium <a href="#footnote1">[1]</a> p.53). 
+                    Instead of using the "standard feed transition" (also called left pentagon in <a href="#footnote1">[1]</a>). 
                     Crossed-V-Variations are based on the feed transition, described here as right (line). It goes as follows:
  
                 </p>
