--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <td class="w-10">\(S \)</td>
                             <td class="w-10">\(S \)</td>
                             <td class="w-10">\(S \)</td>
-                            <td class="w-10 border-r border-black">\(P_A \)</td>
+                            <td class="w-10 border-r border-black">\(S\)</td>
                             <td class="w-16 ">\(\rightarrow A'\)</td>
                         </tr>
                     </table>
