fix classes of text under table

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <td class="w-16 ">\(\rightarrow A'\)</td>
                         </tr>
                     </table>
-                    <h5 class=" text-xs pr-6 pl-6 sm:pl-6 sm:pr-6 pt-2 pb-2 md:pl-40 md:pr-40">
+                    <h5 class=" text-xs w-full sm:text-sm pr-6 pl-6 sm:pr-6 sm:pr-6 md:pl-40 md:pr-40 pb-2">
                         \(^*\)Do not throw: We find it quite hard to do the transition while juggling. <br>
                         It is much easier to walk without juggling, since one is going <b>through</b> the pattern. 
                     </h5>
